feat: adjust user-service
