# lab2/user-service/src/main/java/com/poziomk3/user_service/domain/model/RegisteredUser.java
@@ -1,0 +1,11 @@
+package com.poziomk3.user_service.domain.model;
+
+import lombok.Getter;
+
+import java.time.OffsetDateTime;
+import java.util.UUID;
+
+public record RegisteredUser(UUID userId, String email, OffsetDateTime createdAt) {
+
+}
+
